[package]
name = "tasque"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["http2"] }
bincode = "1.3.3"
chrono = { version = "0.4.27", default-features = false, features = [
  "serde",
  "std",
  "clock",
] }
openraft = "0.8.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sled = { version = "0.34.7", features = ["compression"] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["v7", "std", "serde"] }
